--- a/qa_portfolio.html
+++ b/qa_portfolio.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>QA Engineer Portfolio</title>
+  <title>QA/QC Engineer Portfolio</title>
   <style>
     * { box-sizing: border-box; }
     body { margin: 0; font-family: 'Inter', Arial, sans-serif; background: #0f172a; color: #e2e8f0; }
